# cot-platform

./: .editorconfig  .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  commitlint.config.js
.github/: mlc-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  chief-request.md  feature.md
.github/workflows/: docs-ci.yml  link-check.yml
chiefs/_base/: Dockerfile  README.md
chiefs/addie/: README.md  chief.yaml  system-prompt.md  tools.md
chiefs/franklin/: README.md  chief.yaml  system-prompt.md  tools.md
chiefs/geoff/: README.md  chief.yaml  system-prompt.md  tools.md
chiefs/jules/: README.md  chief.yaml  system-prompt.md  tools.md
deploy/observability/: README.md
docs/: hardware-recommendation.md
docs/adr/: 0001-coordination-model.md  0002-agent-framework.md  0003-model-serving.md  0004-shared-semantic-store.md  0005-human-window-fallback.md  0006-two-tier-memory.md  0007-egress-human-in-loop.md  0008-memory-server-sourcing.md
docs/analysis/: memory-implementation-options.md
docs/architecture/: overview.md
docs/plans/: phase-0-implementation-plan.md  (+3 more)
incubating/cot-memory/: .gitignore  LICENSE  NOTICE.md  README.md  pyproject.toml
incubating/cot-memory/.github/workflows/: ci.yml
incubating/cot-memory/docs/: ARCHITECTURE.md
incubating/cot-memory/docs/contracts/: wks_memory_capture.md  wks_memory_search.md  wks_memory_status.md
incubating/cot-memory/src/cot_memory/: __init__.py  cli.py  server.py  store.py
incubating/cot-memory/tests/: test_smoke.py
mcp-hub/: README.md
scripts/: check-doc-structure.mjs
(+36 files in other folders)
